---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: result
---
statsReportKey: "# NestedFragmentQuery\nfragment EverythingResponseFragment on EverythingResponse{listOfObjects{...ObjectResponseFragment...on ObjectTypeResponse{stringField}}}fragment ObjectResponseFragment on ObjectTypeResponse{intField}fragment UnionType1Fragment on UnionType1{unionType1Field}query NestedFragmentQuery{noInputQuery{...EverythingResponseFragment...on EverythingResponse{listOfUnions{...UnionType1Fragment...on UnionType2{unionType2Field}}}}}"
referencedFieldsByType:
  EverythingResponse:
    fieldNames:
      - listOfObjects
      - listOfUnions
    isInterface: false
  ObjectTypeResponse:
    fieldNames:
      - intField
      - stringField
    isInterface: false
  Query:
    fieldNames:
      - noInputQuery
    isInterface: false
  UnionType1:
    fieldNames:
      - unionType1Field
    isInterface: false
  UnionType2:
    fieldNames:
      - unionType2Field
    isInterface: false
